Use newer function for creating imutable list